[project]
name = "pynite-reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connorferster@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pynite-reporting = "pynite_reporting:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
