[project]
name = "pynite-reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connorferster@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
]

[project.scripts]
pynite-reporting = "pynite_reporting:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pynite-plotly>=0.4.1",
    "pynitefea>=1.1.2",
    "rich>=14.0.0",
]
